--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
    <!-- QUIZ -->
 <section id="view-quiz" class="hidden">
-  <div class="quiz" style="display:flex; gap:20px; align-items:flex-start">
+  <div class="quiz" style="display:flex; gap:20px; align-items:stretch">
 
     <!-- 🔹 Columna esquerra -->
     <div id="leftCol" style="flex:2; min-width:0">
