--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="wrap row">
       <div class="brand">
         <div class="logo" aria-hidden="true">FQ</div>
-        <h1>Focus Academy · Matemàtiques</h1>
+        <h1>Focus Academy · HOLA ALEX</h1>
       </div>
       <nav class="right">
         <button class="pill" onclick="showView('home')">Inici</button>
