--- a/index.html
+++ b/index.html
@@ -185,5 +185,6 @@
   <script src="main.js" defer></script>
   <script src="lang-cat.js" defer></script>
   <script src="quim.js" defer></script>
+  <script src="alex.js" defer></script>
 </body>
 </html>
