--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="wrap row">
       <div class="brand">
         <div class="logo" aria-hidden="true">FQ</div>
-        <h1>Focus Academy · Espai de repàs autònom</h1>
+        <h1>Focus Academy · Matemàtiques</h1>
       </div>
       <nav class="right">
         <button class="pill" onclick="showView('home')">Inici</button>
@@ -185,6 +185,5 @@
   <script src="main.js" defer></script>
   <script src="lang-cat.js" defer></script>
   <script src="quim.js" defer></script>
-  <script src="alex.js" defer></script>
 </body>
 </html>
