--- a/index.html
+++ b/index.html
@@ -197,6 +197,6 @@
   <script src="main.js" defer></script>
   <script src="lang-cat.js" defer></script>
   <script src="quim.js" defer></script>
-  <script src="js/tutor.js"></script>
+  <script src="tutor.js"></script>
 </body>
 </html>
