--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <div id="moduleGrid"></div>
 
-    <!-- Recomanació del Tutor Virtual -->
+    <!-- Recomanació de Focus Academy -->
     <div id="recommendation" class="panel card" style="margin-top:1rem; background:#fffafc;">
       <h3 class="title" style="margin-top:0;">Consell del teu tutor virtual 🤖</h3>
       <div id="recommendationText" class="subtitle">Carregant recomanació...</div>
