--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Focus Academy · Matemàtiques</title>
-  <meta name="description" content="Pràctiques de matemàtiques tipus ThatQuiz per a estudiants. Single-file, sense dependències." />
+  <title>Focus Academy · Espai de repàs</title>
+  <meta name="description" content="Pràctiques de matemàtiques per a estudiants. Single-file, sense dependències." />
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -37,7 +37,7 @@
 
     <!-- Recomanació de Focus Academy -->
     <div id="recommendation" class="panel card" style="margin-top:1rem; background:#fffafc;">
-      <h3 class="title" style="margin-top:0;">Consell del teu tutor virtual 🤖</h3>
+      <h3 class="title" style="margin-top:0;">Consell de Focus Academy 🎓 </h3>
       <div id="recommendationText" class="subtitle">Carregant recomanació...</div>
     </div>
 
