--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
         <button class="pill" onclick="window.location.href='teoria.html'">π</button>
         <button class="pill" onclick="window.location.href='teoriacatala.html'">à</button>
         <button class="pill" onclick="window.location.href='https://focuscat.onrender.com/'">FE</button>
-        <button class="pill" onclick="localStorage.removeItem('lastStudent'); location.reload();">Canvia d'usuari</button>
+        <span id="activeUser" class="chip"></span>
+<button class="pill" onclick="localStorage.removeItem('lastStudent'); location.reload();">Canvia d'usuari</button>
+
       </nav>
     </div>
   </header>
@@ -76,10 +78,16 @@
 </div>
 
     <script>
-      document.addEventListener('DOMContentLoaded', ()=>{
-        showRecommendation('#recommendationText');
-      });
-    </script>
+document.addEventListener('DOMContentLoaded', ()=>{
+  // 🔹 Mostra recomanació del tutor
+  showRecommendation('#recommendationText');
+
+  // 🔹 Mostra l'usuari actiu (si n'hi ha)
+  const current = localStorage.getItem('lastStudent');
+  const badge = document.getElementById('activeUser');
+  if (current && badge) badge.textContent = `👤 ${current}`;
+});
+</script>
   </div>
 </section>
 
