--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <button class="pill" onclick="window.location.href='https://focuscat.onrender.com/'">FE</button>
         <span id="activeUser" class="chip"></span>
 <button class="pill" onclick="localStorage.removeItem('lastStudent'); location.reload();">Canvia d'usuari</button>
+        <button id="logoutBtn" class="pill">Tanca sessió</button>
 
       </nav>
     </div>
