--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <button class="pill" onclick="window.location.href='teoriacatala.html'">à</button>
         <button class="pill" onclick="window.location.href='https://focuscat.onrender.com/'">FE</button>
         <span id="activeUser" class="chip"></span>
-<button class="pill" onclick="localStorage.removeItem('lastStudent'); location.reload();">Canvia d'usuari</button>
+        <button id="switchUserBtn" class="pill">Canvia d'usuari</button>
         <button id="logoutBtn" class="pill">Tanca sessió</button>
 
       </nav>
@@ -262,11 +262,7 @@ Llengua catalana i castellana (ortografia, categories gramaticals, sintaxi), i Q
 
     // 🔹 Mostra overlay si no hi ha usuari actiu
     const current = localStorage.getItem('lastStudent');
-    if(!current){
-      overlay.style.display = 'flex';
-    } else {
-      overlay.style.display = 'none';
-    }
+    overlay.style.display = current ? 'none' : 'flex';
 
     // 🔹 Entrar amb usuari existent
     btnSelect.addEventListener('click', ()=>{
@@ -274,7 +270,7 @@ Llengua catalana i castellana (ortografia, categories gramaticals, sintaxi), i Q
       if(!name) return alert('Selecciona un usuari.');
       localStorage.setItem('lastStudent', name);
       overlay.style.display = 'none';
-      location.reload(); // 🔸 ara el main.js ja es carregarà amb usuari actiu
+      document.dispatchEvent(new CustomEvent('focusquiz:user-login'));
     });
 
     // 🔹 Crear nou usuari
@@ -285,8 +281,10 @@ Llengua catalana i castellana (ortografia, categories gramaticals, sintaxi), i Q
       if(!users.includes(name)) users.push(name);
       localStorage.setItem('students', JSON.stringify(users));
       localStorage.setItem('lastStudent', name);
+      refreshUsers();
+      inputNew.value = '';
       overlay.style.display = 'none';
-      location.reload();
+      document.dispatchEvent(new CustomEvent('focusquiz:user-login'));
     });
 
     // 🔹 Esborrar usuari
@@ -297,6 +295,10 @@ Llengua catalana i castellana (ortografia, categories gramaticals, sintaxi), i Q
       localStorage.setItem('students', JSON.stringify(users));
       if(localStorage.getItem('lastStudent') === name) localStorage.removeItem('lastStudent');
       refreshUsers();
+      if(!localStorage.getItem('lastStudent')){
+        overlay.style.display = 'flex';
+        document.dispatchEvent(new CustomEvent('focusquiz:user-logout'));
+      }
     });
 
     refreshUsers();
