Extract math modules into dedicated file

--- a/index.html
+++ b/index.html
@@ -368,7 +368,8 @@ Llengua catalana i castellana (ortografia, categories gramaticals, sintaxi), i Q
   });
   </script>
 
-  <!-- 🔹 Finalment, el main.js després del login -->
+  <!-- 🔹 Lògica principal i generadors de matemàtiques -->
   <script src="main.js" defer></script>
+  <script src="math.js" defer></script>
 </body>
 </html>
